# VERSO-UI

./: Cargo.toml
.github/workflows/: ci.yml
flappy_assets/: AndroidManifest.xml  classes.dex  resources.arsc
flappy_assets/res/color/: common_signin_btn_text_dark.xml  common_signin_btn_text_light.xml
flappy_assets/res/layout/: activity_splash.xml
res/mipmap-anydpi-v26/: ic_launcher.xml
res/values/: colors.xml  strings.xml
src/: audio.rs  file_browser.rs  lib.rs  renderer.rs  saf.rs
src/java/com/verso/ui/: VersoActivity.java
src/ui/: file_browser.rs  log_viewer.rs  mod.rs
