[package]
name = "verso-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
quad-snd = "0.2"
zip = "0.6"
bytemuck = "1"
thumb-arm = { git = "https://github.com/versonr7/Thumb-ARM", package = "thumb-arm" }
android-activity = { version = "0.4.3", features = ["native-activity"] }
khronos-egl = { version = "6.0.0", features = ["static", "no-pkg-config"] }
glow = "0.12"
log = "0.4"
android_logger = "0.13"
imgui = "0.11"
imgui-glow-renderer = "0.11"

[lib]
crate-type = ["cdylib"]

[package.metadata.android]
permissions = ["android.permission.READ_EXTERNAL_STORAGE", "android.permission.WRITE_EXTERNAL_STORAGE"]
label = "Verso UI"
target_sdk_version = 30
min_sdk_version = 21
features = ["native-activity"]
resources = "res"

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "Verso UI"

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"
exported = true
meta_data = [
    { name = "android.app.lib_name", value = "verso_ui" }
]
intent_filter = [
    { actions = ["android.intent.action.MAIN"], categories = ["android.intent.category.LAUNCHER"] }
]

[package.metadata.android.signing.release]
path = "release.jks"
keystore_password = "android"
key_alias = "retrohle"
key_password = "android"
